--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,10 @@ jacoco {
     toolVersion = "0.8.7"
     reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
 }
+
+sonarqube {
+    properties {
+        property "sonar.projectName", "ETB Demo"
+        property "sonar.projectKey", "OscarVallejo_ETB-Demo"
+    }
+}
