--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ sonarqube {
         property "sonar.projectKey", "OscarVallejo_ETB-Demo"
         property "sonar.sourceEncoding", "UTF-8"
         property "sonar.organization", "oscarvallejo"
+        property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/customJacocoReportDir/test/jacocoTestReport.xml"
     }
 }
 
@@ -31,6 +32,10 @@ test {
     finalizedBy jacocoTestReport // report is always generated after tests run
 }
 jacocoTestReport {
+    reports {
+        xml.required = true
+        csv.required = false
+    }
     dependsOn test // tests are required to run before generating the report
 }
 
