--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
   - task: Gradle@2
     displayName: 'gradlew build'
     inputs:
-      gradleWrapperFile: '$(Parameters.wrapperScript)'
+      gradleWrapperFile: 'gradlew'
       jdkVersionOption: 1.11
       sonarQubeRunAnalysis: true
       sonarQubeGradlePluginVersion: 3.3
